# flake8_patterns

./: .gitignore  .pre-commit-config.yaml  CI_STATUS.md  CLAUDE.md  GEMINI.md  LICENSE  LICENSE-2.0.txt  README.md  THIRD_PARTY_LICENSES.md  linter.sh  pyproject.toml  safety-report.json  setup_workspace.sh  test_ci_basic.py
.github/workflows/: ci.yml  safety_scan.yml
docs/: EP_rules_analysis.md  index.md
docs/analysis/: effective_python_comprehensive.md  high_performance_python_planned.md  index.md  summary.md
docs/rules/: EFP105.md  EFP213.md  EFP318.md  EFP320.md  EFP321.md  EFP426.md  EP105.md  EP213.md  EP318.md  EP320.md  EP321.md  EP426.md  assignment_patterns.md  dictionary_patterns.md  index.md  iteration_patterns.md  string_operations.md
examples/: bad_patterns.py  good_patterns.py
scripts/: verify_instalation.py  verify_installation.py
src/flake8_patterns/: __init__.py  book_refs.py  checker.py  messages.py  utils.py
src/flake8_patterns/rules/: __init__.py  assignment_patterns.py  comprehension_patterns.py  dictionary_patterns.py  function_patterns.py  iteration_patterns.py  string_patterns.py
src/flake8_performance_patterns/: .__init__.py.swp  __init__.py  book_refs.py  checker.py  messages.py  utils.py
tests/: __init__.py  conftest.py  test_tier1_rules.py
tests/rule_analysis/: __init__.py  analyze_rule.py  efp105_analysis.py  report_generator.py
